--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <p class="py-4 text-[16px] leading-6 text-[#000]">Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between items-center px-1">
-                        <h3 class="text-[36px] font-extrabold text-[FABE4C]">$234</h3>
+                        <h3 class="text-[36px] font-extrabold text-[#FABE4C]">$234</h3>
                         <button
                             class="px-6 py-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[20px] font-medium roboto rounded-[20px] mt-3 text-[#fff]">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -122,7 +122,7 @@
                     <p class="py-4 text-[16px] leading-6 text-[#000]">Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between items-center px-1">
-                        <h3 class="text-[36px] font-extrabold text-[FABE4C]">$234</h3>
+                        <h3 class="text-[36px] font-extrabold text-[#FABE4C]">$234</h3>
                         <button
                             class="px-6 py-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[20px] font-medium roboto rounded-[20px] mt-3 text-[#fff]">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -142,7 +142,7 @@
                     <p class="py-4 text-[16px] leading-6 text-[#000]">Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between items-center px-1">
-                        <h3 class="text-[36px] font-extrabold text-[FABE4C]">$234</h3>
+                        <h3 class="text-[36px] font-extrabold text-[#FABE4C]">$234</h3>
                         <button
                             class="px-6 py-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[20px] font-medium roboto rounded-[20px] mt-3 text-[#fff]">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -162,7 +162,7 @@
                     <p class="py-4 text-[16px] leading-6 text-[#000]">Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between items-center px-1">
-                        <h3 class="text-[36px] font-extrabold text-[FABE4C]">$234</h3>
+                        <h3 class="text-[36px] font-extrabold text-[#FABE4C]">$234</h3>
                         <button
                             class="px-6 py-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[20px] font-medium roboto rounded-[20px] mt-3 text-[#fff]">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -182,7 +182,7 @@
                     <p class="py-4 text-[16px] leading-6 text-[#000]">Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between items-center px-1">
-                        <h3 class="text-[36px] font-extrabold text-[FABE4C]">$234</h3>
+                        <h3 class="text-[36px] font-extrabold text-[#FABE4C]">$234</h3>
                         <button
                             class="px-6 py-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[20px] font-medium roboto rounded-[20px] mt-3 text-[#fff]">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -202,7 +202,7 @@
                     <p class="py-4 text-[16px] leading-6 text-[#000]">Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between items-center px-1">
-                        <h3 class="text-[36px] font-extrabold text-[FABE4C]">$234</h3>
+                        <h3 class="text-[36px] font-extrabold text-[#FABE4C]">$234</h3>
                         <button
                             class="px-6 py-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-[20px] font-medium roboto rounded-[20px] mt-3 text-[#fff]">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
