--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                       </li>
                       <li><a>Item 3</a></li>
                     </ul>
-                    <a class="btn btn-ghost text-xl"><h2 class="font-semibold text-[25px] ml-3"><span class="text-[#A4BC46]">Penguin</span> Fashion</h2></a>
+                    <a class="btn btn-ghost text-xl"><h2 class="font-semibold text-[16px] md:text-[25px] ml-3"><span class="text-[#A4BC46]">Penguin</span> Fashion</h2></a>
                   </div>
                  
                 </div>
